[gd_scene load_steps=13 format=3 uid="uid://c76rpt4liwntk"]

[ext_resource type="Script" path="res://main_view.gd" id="1_1xrw4"]
[ext_resource type="Texture2D" uid="uid://ceabbpqtlxexo" path="res://gfx/dark_background.png" id="2_qxw27"]
[ext_resource type="PackedScene" uid="uid://cdmjabh7kaqnd" path="res://ui/menu_bar/main_menu.tscn" id="2_v12bk"]
[ext_resource type="PackedScene" uid="uid://b5u3ncjp2ptt7" path="res://ui/import_log/import_log.tscn" id="3_2vkq6"]
[ext_resource type="PackedScene" uid="uid://pu7tauqonrgp" path="res://ui/side_bar/side_bar.tscn" id="3_072ji"]
[ext_resource type="PackedScene" uid="uid://86emblidbalh" path="res://ui/image_grid/image_grid.tscn" id="4_ck5lf"]
[ext_resource type="PackedScene" uid="uid://s3cqe7hw7f1n" path="res://ui/collections/collections_grid/collections_grid.tscn" id="5_mfqte"]
[ext_resource type="PackedScene" uid="uid://c66ebqguifkyj" path="res://ui/grid_info_panel/grid_info_panel.tscn" id="6_die3w"]
[ext_resource type="PackedScene" uid="uid://baiebkcdyqp2p" path="res://ui/tag_editor/tag_editor.tscn" id="9_7sv3t"]
[ext_resource type="PackedScene" uid="uid://dse3yrjipspu5" path="res://ui/collections/collection_editor/collection_editor.tscn" id="10_gala1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl8um"]
bg_color = Color(0.223529, 0.239216, 0.25098, 1)

[sub_resource type="Theme" id="Theme_dmqth"]
PopupMenu/styles/panel = SubResource("StyleBoxFlat_pl8um")

[node name="MainView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dmqth")
script = ExtResource("1_1xrw4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qxw27")

[node name="ImportLog" parent="." instance=ExtResource("3_2vkq6")]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="MenuBar" parent="VBoxContainer" instance=ExtResource("2_v12bk")]
clip_contents = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SideBar" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_072ji")]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="GridInfoPanel" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("6_die3w")]
layout_mode = 2
size_flags_vertical = 4

[node name="Content" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ImageGrid" parent="VBoxContainer/HBoxContainer/Content" instance=ExtResource("4_ck5lf")]
layout_mode = 1

[node name="CollectionsGrid" parent="VBoxContainer/HBoxContainer/Content" instance=ExtResource("5_mfqte")]
visible = false
layout_mode = 2
anchors_preset = 0

[node name="TagEditor" parent="." instance=ExtResource("9_7sv3t")]
visible = false

[node name="CollectionEditor" parent="." instance=ExtResource("10_gala1")]
visible = false

[connection signal="refresh_grid" from="VBoxContainer/MenuBar" to="." method="_on_menu_bar_refresh_grid"]
[connection signal="sort_mode_changed" from="VBoxContainer/MenuBar" to="." method="_on_menu_bar_sort_mode_changed"]
[connection signal="switch_grids" from="VBoxContainer/MenuBar" to="." method="_on_menu_bar_switch_grids"]
[connection signal="file_replaced" from="VBoxContainer/HBoxContainer/Content/ImageGrid" to="." method="_on_image_grid_file_replaced"]
[connection signal="grid_updated" from="VBoxContainer/HBoxContainer/Content/ImageGrid" to="." method="_on_grid_grid_updated"]
[connection signal="tag_edit" from="VBoxContainer/HBoxContainer/Content/ImageGrid" to="." method="_on_grid_tag_edit"]
[connection signal="edit_collection" from="VBoxContainer/HBoxContainer/Content/CollectionsGrid" to="." method="_on_collections_grid_edit_collection"]
[connection signal="grid_updated" from="VBoxContainer/HBoxContainer/Content/CollectionsGrid" to="." method="_on_grid_grid_updated"]
